- update dependecies versions - update / fix example - fix highliting after initial README render - remove extra comment blocks

--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "React sotrybook addon to show components README",
   "dependencies": {
     "github-markdown-css": "^2.4.1",
-    "highlight.js": "=9.6.0",
+    "highlight.js": "^9.9.0",
     "react-remarkable": "^1.1.1"
   },
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "^3.2.2",
-    "@kadira/storybook": "^2.21.0",
+    "@kadira/react-storybook-addon-info": "^3.3.0",
+    "@kadira/storybook": "^2.35.3",
     "@kadira/storybook-addon-options": "^1.0.1",
     "@kadira/storybook-deployer": "^1.2.0",
-    "babel-core": "^6.17.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.25.0",
+    "babel-core": "^6.22.1",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.1",
     "json-loader": "^0.5.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1"
