--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storybook-readme",
   "version": "1.3.0",
-  "description": "React sotrybook addon to show components README",
+  "description": "React storybook addon to show components README",
   "dependencies": {
     "github-markdown-css": "^2.4.1",
     "highlight.js": "^9.9.0",
