--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "highlight.js": "^9.9.0",
+    "husky": "^0.13.4",
+    "lint-staged": "^3.6.1",
+    "prettier": "^1.4.4",
     "react-remarkable": "^1.1.1",
     "string-raw": "^1.0.1"
   },
@@ -47,9 +50,17 @@
     "prepublish": "npm run clear & babel -d ./ ./src",
     "dev": "npm run clear & babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "precommit": "lint-staged",
+   "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "*.js": [
+      "prettier --trailing-comma es5 --single-quote --write",
+      "git add"
+    ]
+  }
 }
