--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "url": "git+https://github.com/tuchk4/storybook-readme"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react-remarkable": "^1.1.1",
+    "react-remarkable": "^1.1.2",
     "string-raw": "^1.0.1"
   },
   "files": [
@@ -21,35 +20,38 @@
     "with-readme.js"
   ],
   "devDependencies": {
-    "@storybook/addon-info": "^3.0.0-alpha.0",
-    "@storybook/addon-options": "^3.0.0-alpha.0",
-    "@storybook/react": "^3.0.0-alpha.0",
+    "@storybook/addon-info": "^3.2.12",
+    "@storybook/addon-knobs": "^3.2.12",
+    "@storybook/addon-options": "^3.2.12",
+    "@storybook/react": "^3.2.12",
     "@storybook/storybook-deployer": "^2.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.22.1",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.28.2",
-    "husky": "^0.13.4",
-    "json-loader": "^0.5.4",
-    "lint-staged": "^3.6.1",
-    "prettier": "^1.4.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-react-app": "^3.0.3",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "husky": "^0.14.3",
+    "json-loader": "^0.5.7",
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.7.3",
+    "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "style-loader": "^0.18.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "style-loader": "^0.18.2",
+    "styled-components": "^2.2.0"
   },
   "peerDependencies": {
     "@storybook/addons": "^3.0.0-alpha.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prepublish": "npm run clear & babel -d ./ ./src",
-    "dev": "npm run clear & babel -d ./ ./src --watch",
+    "storybook": "cross-env NODE_ENV=development start-storybook -p 6006",
+    "build-storybook": "cross-env NODE_ENV=production build-storybook",
+    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf",
     "deploy-storybook": "storybook-to-ghpages",
     "precommit": "lint-staged",
