--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "storybook-readme",
   "version": "3.1.0-beta2",
   "description": "React storybook addon to show components README",
+  "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
   "repository": {
@@ -18,7 +19,8 @@
     "readme-manager.js",
     "register.js",
     "with-readme.js",
-    "with-docs.js"
+    "with-docs.js",
+    "index.js"
   ],
   "devDependencies": {
     "@storybook/addon-info": "^3.2.12",
