--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "url": "git+https://github.com/tuchk4/storybook-readme"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
+    "prismjs": "^1.8.3",
     "react-remarkable": "^1.1.2",
     "string-raw": "^1.0.1"
   },
@@ -53,20 +55,20 @@
   "scripts": {
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006",
     "build-storybook": "cross-env NODE_ENV=production build-storybook",
-    "prepublish":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
+    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf",
     "deploy-storybook": "storybook-to-ghpages",
     "precommit": "lint-staged",
-    "format":
-      "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'"
+    "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "lint-staged": {
-    "*.js": ["prettier --trailing-comma es5 --single-quote --write", "git add"]
+    "*.js": [
+      "prettier --trailing-comma es5 --single-quote --write",
+      "git add"
+    ]
   }
 }
