--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "prismjs": "^1.8.3",
-    "react-remarkable": "^1.1.2",
+    "prismjs": "^1.8.4",
+    "react-remarkable": "^1.1.3",
     "string-raw": "^1.0.1"
   },
   "files": [
@@ -25,35 +25,39 @@
     "index.js"
   ],
   "devDependencies": {
-    "@storybook/addon-info": "^3.2.12",
-    "@storybook/addon-knobs": "^3.2.12",
-    "@storybook/addon-options": "^3.2.12",
-    "@storybook/react": "^3.2.12",
+    "@storybook/addon-info": "^3.2.15",
+    "@storybook/addon-knobs": "^3.2.15",
+    "@storybook/addon-options": "^3.2.15",
+    "@storybook/addons": "^3.0.0-alpha.0",
     "@storybook/storybook-deployer": "^2.0.0",
+    "@storybook/vue": "^3.2.15",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-preset-react-app": "^3.0.3",
-    "cross-env": "^5.0.5",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-vue": "^1.2.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "husky": "^0.14.3",
     "json-loader": "^0.5.7",
-    "lint-staged": "^4.2.3",
-    "prettier": "^1.7.3",
+    "lint-staged": "^5.0.0",
+    "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "style-loader": "^0.18.2",
-    "styled-components": "^2.2.0"
-  },
-  "peerDependencies": {
-    "@storybook/addons": "^3.0.0-alpha.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "style-loader": "^0.19.0",
+    "styled-components": "^2.2.3",
+    "vue": "^2.5.3",
+    "vue-hot-reload-api": "^2.2.3",
+    "vue-loader": "^13.5.0",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.3"
   },
   "scripts": {
-    "storybook": "cross-env NODE_ENV=development start-storybook -p 6006",
+    "storybook":
+      "cross-env NODE_ENV=development start-storybook -p 6006 -c example-react/.storybook",
+    "storybook-vue":
+      "cross-env NODE_ENV=development start-storybook -p 6005 -c example-vue/.storybook",
     "build-storybook": "cross-env NODE_ENV=production build-storybook",
     "prepublish":
       "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
@@ -63,12 +67,16 @@
     "deploy-storybook": "storybook-to-ghpages",
     "precommit": "lint-staged",
     "format":
-      "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'"
+      "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js' 'src/**/*.json'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "lint-staged": {
-    "*.js": ["prettier --trailing-comma es5 --single-quote --write", "git add"]
+    "*.js": ["prettier --trailing-comma es5 --single-quote --write", "git add"],
+    "*.json": [
+      "prettier --trailing-comma es5 --single-quote --write",
+      "git add"
+    ]
   }
 }
