--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "babel-preset-vue": "^1.2.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
+    "html-loader": "^0.5.1",
     "husky": "^0.14.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^5.0.0",
+    "markdown-loader": "^2.0.1",
     "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
