--- a/package.json
+++ b/package.json
@@ -1,71 +1,25 @@
 {
   "name": "storybook-readme",
-  "version": "3.1.1",
+  "private": true,
   "description": "React storybook addon to show components README",
-  "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tuchk4/storybook-readme"
   },
-  "dependencies": {
-    "lodash": "^4.17.4",
-    "prismjs": "^1.8.4",
-    "react-remarkable": "^1.1.3",
-    "string-raw": "^1.0.1"
-  },
-  "files": [
-    "components",
-    "constants.js",
-    "readme-manager.js",
-    "register.js",
-    "with-readme.js",
-    "with-docs.js",
-    "index.js"
-  ],
   "devDependencies": {
-    "@storybook/addon-info": "^3.2.15",
-    "@storybook/addon-knobs": "^3.2.15",
-    "@storybook/addon-options": "^3.2.15",
-    "@storybook/addons": "^3.0.0-alpha.0",
     "@storybook/storybook-deployer": "^2.0.0",
-    "@storybook/vue": "^3.2.15",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-react-app": "^3.1.0",
-    "babel-preset-vue": "^1.2.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "html-loader": "^0.5.1",
     "husky": "^0.14.3",
-    "json-loader": "^0.5.7",
+    "lerna": "^2.5.1",
     "lint-staged": "^5.0.0",
-    "markdown-loader": "^2.0.1",
-    "prettier": "^1.8.2",
-    "prop-types": "^15.6.0",
-    "raw-loader": "^0.5.1",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "style-loader": "^0.19.0",
-    "styled-components": "^2.2.3",
-    "vue": "^2.5.3",
-    "vue-hot-reload-api": "^2.2.3",
-    "vue-loader": "^13.5.0",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.3"
+    "prettier": "^1.8.2"
   },
   "scripts": {
-    "storybook":
-      "cross-env NODE_ENV=development start-storybook -p 6006 -c example-react/.storybook",
-    "storybook-vue":
-      "cross-env NODE_ENV=development start-storybook -p 6005 -c example-vue/.storybook",
-    "build-storybook": "cross-env NODE_ENV=production build-storybook",
-    "prepublish":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
-    "clear": "ls ./src | xargs rm -rf",
+    "storybook-react": "npm run storybook ---prefix ./packages/example-react",
+    "storybook-vue": "npm run storybook ---prefix ./packages/example-vue",
+    "dev": "lerna run dev --stream --parallel",
+    "clear": "lerna run clear",
     "deploy-storybook": "storybook-to-ghpages",
     "precommit": "lint-staged",
     "format":
