- vue support - add lerna for examples react/vue - markdown as webpack laoders

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 node_modules
 .DS_Store
 .idea
+etc/
 npm-debug.log
-/coverage
-/components
-/constants.js
-/readme-manager.js
-/register.js
-/with-readme.js
-/with-docs.js
-/index.js
+coverage/
 /storybook-static
 /out*
+/packages/storybook-readme/components/
+/packages/storybook-readme/services/
+/packages/storybook-readme/styles/
+/packages/storybook-readme/env/
+/packages/storybook-readme/constants.js
+/packages/storybook-readme/index.js
+/packages/storybook-readme/register.js
+/packages/storybook-readme/with-docs.js
+/packages/storybook-readme/with-readme.js
