--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -8,20 +8,20 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/vue": "^3.2.15",
-    "@storybook/addon-info": "^3.2.15",
-    "@storybook/addon-knobs": "^3.2.15",
-    "@storybook/addon-options": "^3.2.15",
-    "@storybook/addons": "^3.2.15",
-    "cross-env": "^5.1.1",
-    "storybook-readme": "=3.1.1",
-    "vue": "^2.5.3",
-    "vue-hot-reload-api": "^2.2.3",
-    "vue-loader": "^13.5.0",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.3",
+    "@storybook/addon-info": "^3.3.3",
+    "@storybook/addon-knobs": "^3.3.3",
+    "@storybook/addon-options": "^3.3.3",
+    "@storybook/addons": "^3.3.3",
+    "@storybook/vue": "^3.3.3",
+    "cross-env": "^5.1.3",
     "html-loader": "^0.5.1",
-    "markdown-loader": "^2.0.1"
+    "markdown-loader": "^2.0.1",
+    "storybook-readme": "=3.1.1",
+    "vue": "^2.5.13",
+    "vue-hot-reload-api": "^2.2.4",
+    "vue-loader": "^13.6.2",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {},
   "license": "ISC"
