--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -13,6 +13,7 @@
     "@storybook/addon-options": "^3.3.3",
     "@storybook/addons": "^3.3.3",
     "@storybook/vue": "^3.3.3",
+    "babel-core": "^6.26.0",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.1",
     "markdown-loader": "^2.0.1",
