--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -1,7 +1,9 @@
 {
   "name": "storybook-readme",
+  "private": false,
   "version": "3.1.1",
-  "description": "React storybook addon to show components README",
+  "description":
+    "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
