--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -4,25 +4,39 @@
   "version": "1.0.0",
   "scripts": {
     "prepublishOnly": "echo \"Error: not allowed to publish\" && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6005",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "test": "jest"
   },
   "dependencies": {
-    "@storybook/storybook-deployer": "^2.2.0",
-    "@storybook/addon-knobs": "^3.3.3",
-    "@storybook/addon-options": "^3.3.3",
-    "@storybook/addons": "^3.3.3",
-    "@storybook/react": "^3.3.3",
+    "@storybook/addon-knobs": "^3.3.13",
+    "@storybook/addon-options": "^3.3.13",
+    "@storybook/addon-storyshots": "^3.3.13",
+    "@storybook/addons": "^3.3.13",
+    "@storybook/react": "^3.3.13",
+    "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.2",
+    "babel-preset-react-app": "^3.1.1",
     "cross-env": "^5.1.3",
-    "html-loader": "^0.5.1",
-    "markdown-loader": "^2.0.1",
+    "file-loader": "^1.1.7",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^2.0.2",
+    "markdown-loader-jest": "^0.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "rockey-react": "=0.0.16-alpha.256b890c",
-    "storybook-readme": "=3.1.1"
+    "react-test-renderer": "^16.2.0",
+    "storybook-readme": "^3.2.0"
   },
-  "devDependencies": {},
-  "license": "ISC"
+  "license": "ISC",
+  "jest": {
+    "transform": {
+      "^.+\\.js?$": "babel-jest",
+      "^.+\\.md?$": "markdown-loader-jest"
+    },
+    "moduleNameMapper": {
+      "@storybook/addons":
+        "<rootDir>/../storybook-readme/node_modules/@storybook/addons"
+    }
+  }
 }
