--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -8,20 +8,20 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/addon-info": "^3.3.3",
-    "@storybook/addon-knobs": "^3.3.3",
-    "@storybook/addon-options": "^3.3.3",
-    "@storybook/addons": "^3.3.3",
-    "@storybook/vue": "^3.3.3",
+    "@storybook/addon-info": "^3.3.13",
+    "@storybook/addon-knobs": "^3.3.13",
+    "@storybook/addon-options": "^3.3.13",
+    "@storybook/addons": "^3.3.13",
+    "@storybook/vue": "^3.3.13",
     "babel-core": "^6.26.0",
     "cross-env": "^5.1.3",
-    "html-loader": "^0.5.1",
-    "markdown-loader": "^2.0.1",
-    "storybook-readme": "=3.1.1",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^2.0.2",
+    "storybook-readme": "^3.2.0",
     "vue": "^2.5.13",
     "vue-hot-reload-api": "^2.2.4",
-    "vue-loader": "^13.6.2",
-    "vue-style-loader": "^3.0.3",
+    "vue-loader": "^14.1.1",
+    "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {},
