--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -13,7 +13,6 @@
     "@storybook/addon-options": "^3.3.13",
     "@storybook/addons": "^3.3.13",
     "@storybook/vue": "^3.3.13",
-    "babel-core": "^6.26.0",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^2.0.2",
@@ -22,7 +21,11 @@
     "vue-hot-reload-api": "^2.2.4",
     "vue-loader": "^14.1.1",
     "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-vue": "^2.0.1"
   },
   "devDependencies": {},
   "license": "ISC"
