Adapt addon for latest storybook beta release #79

--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -2,7 +2,8 @@
   "name": "storybook-readme",
   "private": false,
   "version": "3.3.0",
-  "description": "Storybook addon to show components README (for React and Vue)",
+  "description":
+    "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
@@ -11,8 +12,10 @@
     "url": "git+https://github.com/tuchk4/storybook-readme"
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "html-loader": "^0.5.5",
     "lodash": "^4.17.4",
+    "markdown-loader": "^3.0.0",
+    "marked": "^0.4.0",
     "prismjs": "^1.9.0",
     "string-raw": "^1.0.1"
   },
@@ -20,6 +23,7 @@
     "@storybook/addons": "^3.3.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-react-app": "^3.0.3",
     "cross-env": "^5.1.3",
     "react": "^16.2.0",
@@ -37,8 +41,10 @@
     "with-readme.js"
   ],
   "scripts": {
-    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
+    "prepublish":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf"
   },
   "keywords": [],
