--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -9,11 +9,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@storybook/addon-knobs": "^3.3.13",
-    "@storybook/addon-options": "^3.3.13",
-    "@storybook/addon-storyshots": "^3.3.13",
-    "@storybook/addons": "^3.3.13",
-    "@storybook/react": "^3.3.13",
+    "@storybook/addon-actions": "4.0.0-alpha.6",
+    "@storybook/addon-options": "4.0.0-alpha.16",
+    "@storybook/react": "4.0.0-alpha.16",
+    "@storybook/addon-knobs": "4.0.0-alpha.16",
+    "@storybook/addon-storyshots": "4.0.0-alpha.16",
+    "@storybook/addons": "4.0.0-alpha.16",
+
     "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.2.2",
