--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -8,24 +8,25 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/addon-info": "^3.3.13",
-    "@storybook/addon-knobs": "^3.3.13",
-    "@storybook/addon-options": "^3.3.13",
-    "@storybook/addons": "^3.3.13",
-    "@storybook/vue": "^3.3.13",
+    "@storybook/addon-options": "4.0.0-alpha.16",
+    "@storybook/vue": "4.0.0-alpha.16",
+    "@storybook/addons": "4.0.0-alpha.16",
+    "@storybook/addon-knobs": "4.0.0-alpha.16",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^2.0.2",
     "storybook-readme": "^3.2.0",
-    "vue": "^2.5.13",
-    "vue-hot-reload-api": "^2.2.4",
-    "vue-loader": "^14.1.1",
-    "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "^2.5.13",
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.0",
+    "vue-loader": "^15.3.0",
+    "vue-style-loader": "^4.1.1",
+    "vue-template-compiler": "^2.5.17",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-vue": "^2.0.1"
+    "babel-preset-vue": "^2.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {},
   "license": "ISC"
