--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storybook-readme",
   "private": false,
-  "version": "3.3.0",
+  "version": "4.0.0-beta1",
   "description":
     "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
