--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -8,10 +8,10 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/addon-options": "4.0.0-alpha.16",
-    "@storybook/vue": "4.0.0-alpha.16",
-    "@storybook/addons": "4.0.0-alpha.16",
-    "@storybook/addon-knobs": "4.0.0-alpha.16",
+    "@storybook/addon-options": "4.0.0-rc.0",
+    "@storybook/vue": "4.0.0-rc.0",
+    "@storybook/addons": "4.0.0-rc.0",
+    "@storybook/addon-knobs": "4.0.0-rc.0",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^2.0.2",
