--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -2,7 +2,7 @@
   "name": "storybook-readme",
   "private": false,
 
-  "version": "4.0.0-beta1",
+  "version": "4.0.0",
   "description":
     "Storybook addon to show components README (for React and Vue)",
 
