--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -1,11 +1,8 @@
 {
   "name": "storybook-readme",
   "private": false,
-
-  "version": "4.0.0",
-  "description":
-    "Storybook addon to show components README (for React and Vue)",
-
+  "version": "4.0.1",
+  "description": "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
@@ -18,9 +15,9 @@
     "lodash": "^4.17.4",
     "markdown-loader": "^4.0.0",
     "marked": "^0.5.0",
+    "node-emoji": "1.8.1",
     "prismjs": "^1.9.0",
-    "string-raw": "^1.0.1",
-    "node-emoji": "1.8.1"
+    "string-raw": "^1.0.1"
   },
   "devDependencies": {
     "@storybook/addons": "^3.3.3",
@@ -44,10 +41,8 @@
     "with-readme.js"
   ],
   "scripts": {
-    "prepublish":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev":
-      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
+    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf"
   },
   "keywords": [],
