--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -2,6 +2,7 @@
   "name": "example-react",
   "private": true,
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "prepublishOnly": "echo \"Error: not allowed to publish\" && exit 1",
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6005",
@@ -9,34 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "@storybook/addon-actions": "4.0.0-rc.0",
-    "@storybook/addon-options": "4.0.0-rc.0",
-    "@storybook/addon-notes": "4.0.0-rc.0",
-    "@storybook/react": "4.0.0-rc.0",
-    "@storybook/addon-knobs": "4.0.0-rc.0",
-    "@storybook/addon-storyshots": "4.0.0-rc.0",
-    "@storybook/addons": "4.0.0-rc.0",
-
+    "@babel/plugin-transform-modules-commonjs": "7.2.0",
+    "@babel/core": "=7.1.6",
+    "@storybook/addon-actions": "4.1.6",
+    "@storybook/addon-knobs": "4.1.6",
+    "@storybook/addon-notes": "4.1.6",
+    "@storybook/addon-options": "4.1.6",
+    "@storybook/addon-storyshots": "4.1.6",
+    "@storybook/addons": "4.1.6",
+    "@storybook/react": "4.1.6",
     "@storybook/storybook-deployer": "^2.3.0",
-    "@babel/core": "^7.0.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
-    "babel-preset-react-app": "^4.0.0-next.a671462c",
+    "babel-preset-react-app": "^7.0.0",
     "cross-env": "^5.1.3",
     "file-loader": "^1.1.7",
     "html-loader": "^0.5.5",
+    "jest": "^23.6.0",
     "markdown-loader": "^2.0.2",
     "markdown-loader-jest": "^0.1.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-test-renderer": "^16.5.0",
-    "storybook-readme": "=4.0.0-beta1"
+    "storybook-readme": "=4.0.2"
   },
-  "license": "ISC",
   "jest": {
+    "testURL": "http://localhost",
     "transform": {
-      "^.+\\.js?$": "babel-jest",
-      "^.+\\.md?$": "markdown-loader-jest"
+      "^.+\\.md?$": "markdown-loader-jest",
+      "^.+\\.js?$": "babel-jest"
     },
     "moduleNameMapper": {
       "@storybook/addons":
