--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -1,8 +1,10 @@
 {
   "name": "storybook-readme",
+  "license": "MIT",
   "private": false,
   "version": "4.0.2",
-  "description": "Storybook addon to show components README (for React and Vue)",
+  "description":
+    "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
@@ -20,7 +22,7 @@
     "string-raw": "^1.0.1"
   },
   "devDependencies": {
-    "@storybook/addons": "^3.3.3",
+    "@storybook/addons": "^4.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -41,11 +43,12 @@
     "with-readme.js"
   ],
   "scripts": {
-    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
+    "prepublish":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ["storybook", "react-storybook", "docs", "readme"],
+  "author": "valeriy.sorokobatko@gmail.com"
 }
