--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -9,14 +9,14 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/addon-options": "4.0.0-rc.0",
-    "@storybook/vue": "4.0.0-rc.0",
-    "@storybook/addons": "4.0.0-rc.0",
-    "@storybook/addon-knobs": "4.0.0-rc.0",
+    "@storybook/addon-options": "4.1.6",
+    "@storybook/vue": "4.1.6",
+    "@storybook/addons": "4.1.6",
+    "@storybook/addon-knobs": "4.1.6",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^2.0.2",
-    "storybook-readme": "^3.2.0",
+    "storybook-readme": "=4.0.4",
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.0",
     "vue-loader": "^15.3.0",
