--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "private": false,
   "version": "4.0.5",
-  "description": "Storybook addon to show components README (for React and Vue)",
+  "description":
+    "Storybook addon to show components README (for React and Vue)",
   "main": "index.js",
   "homepage": "https://github.com/tuchk4/storybook-readme",
   "bugs": "https://github.com/tuchk4/storybook-readme/issues",
@@ -18,7 +19,8 @@
     "marked": "^0.5.0",
     "node-emoji": "1.8.1",
     "prismjs": "^1.9.0",
-    "string-raw": "^1.0.1"
+    "string-raw": "^1.0.1",
+    "@storybook/addon-info": "^4.1.11"
   },
   "devDependencies": {
     "@storybook/addons": "^4.1.6",
@@ -42,15 +44,12 @@
     "with-readme.js"
   ],
   "scripts": {
-    "prepublish": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
-    "dev": "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
+    "prepublish":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src",
+    "dev":
+      "npm run clear & cross-env NODE_ENV=production babel -d ./ ./src --watch",
     "clear": "ls ./src | xargs rm -rf"
   },
-  "keywords": [
-    "storybook",
-    "react-storybook",
-    "docs",
-    "readme"
-  ],
+  "keywords": ["storybook", "react-storybook", "docs", "readme"],
   "author": "valeriy.sorokobatko@gmail.com"
 }
