--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,10 @@
     "coverage/": true,
     "lerna-debug.log": true,
     "flow-typed/": true,
+    "vue/": true,
     "packages/storybook-readme/components/": true,
     "packages/storybook-readme/index.js": true,
-    "packages/storybook-readme/constants.js": true,
+    "packages/storybook-readme/const.js": true,
     "packages/storybook-readme/with-readme.js": true,
     "packages/storybook-readme/with-docs.js": true,
     "packages/storybook-readme/register.js": true,
