--- a/packages/example-vue/.babelrc
+++ b/packages/example-vue/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": [["env", { "modules": false }], "vue"],
-  "env": {
-    "test": {
-      "presets": ["env"]
-    }
-  }
+  "presets": ["@vue/babel-preset-app"]
 }
