--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": ["packages/*"],
   "independent": true,
   "version": "independent"
