--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -10,29 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "highlight.js": "^9.15.6",
+    "@babel/core": "7.3.4",
     "@babel/plugin-transform-modules-commonjs": "7.2.0",
-    "@babel/core": "=7.1.6",
-    "@storybook/addon-actions": "4.1.6",
-    "@storybook/addon-knobs": "4.1.6",
-    "@storybook/addon-notes": "4.1.6",
-    "@storybook/addon-options": "4.1.6",
-    "@storybook/addon-storyshots": "4.1.6",
-    "@storybook/addons": "4.1.6",
-    "@storybook/react": "4.1.6",
+    "@storybook/addon-actions": "5.0.1",
+    "@storybook/addon-knobs": "5.0.1",
+    "@storybook/addon-notes": "5.0.1",
+    "@storybook/addon-info": "5.0.1",
+    "@storybook/addon-storyshots": "5.0.1",
+    "@storybook/addons": "5.0.1",
+    "@storybook/react": "5.0.1",
     "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.2",
     "babel-preset-react-app": "^7.0.0",
     "cross-env": "^5.1.3",
-    "file-loader": "^1.1.7",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
-    "jest": "^23.6.0",
-    "markdown-loader": "^2.0.2",
+    "jest": "^24.1.0",
+    "markdown-loader": "^5.0.0",
     "markdown-loader-jest": "^0.1.1",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-test-renderer": "^16.5.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-test-renderer": "^16.8.3",
     "storybook-readme": "=4.0.5"
   },
   "jest": {
@@ -42,8 +44,11 @@
       "^.+\\.js?$": "babel-jest"
     },
     "moduleNameMapper": {
-      "@storybook/addons":
-        "<rootDir>/../storybook-readme/node_modules/@storybook/addons"
+      "@storybook/addons": "<rootDir>/../storybook-readme/node_modules/@storybook/addons"
     }
+  },
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5"
   }
 }
