--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -9,23 +9,22 @@
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6006"
   },
   "dependencies": {
-    "@storybook/addon-options": "4.1.6",
-    "@storybook/vue": "4.1.6",
-    "@storybook/addons": "4.1.6",
-    "@storybook/addon-knobs": "4.1.6",
+    "@storybook/addon-knobs": "^5.0.0",
+    "@storybook/addons": "^5.0.0",
+    "@storybook/vue": "^5.0.0",
+    "@babel/core": "7.3.4",
+    "@vue/babel-preset-app": "^3.4.1",
+    "babel-preset-vue": "^2.0.1",
+    "babel-loader": "^8.0.2",
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
-    "markdown-loader": "^2.0.2",
+    "markdown-loader": "^5.0.0",
     "storybook-readme": "=4.0.5",
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.0",
     "vue-loader": "^15.3.0",
     "vue-style-loader": "^4.1.1",
-    "vue-template-compiler": "^2.5.17",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-vue": "^2.0.1"
+    "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {}
 }
