--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,6 @@
     "coverage/": true,
     "lerna-debug.log": true,
     "flow-typed/": true,
-    "vue/": true,
     "packages/storybook-readme/components/": true,
     "packages/storybook-readme/index.js": true,
     "packages/storybook-readme/const.js": true,
@@ -11,6 +10,7 @@
     "packages/storybook-readme/with-docs.js": true,
     "packages/storybook-readme/register.js": true,
     "packages/storybook-readme/env/": true,
+    "packages/storybook-readme/vue/": true,
     "packages/storybook-readme/styles/": true,
     "packages/storybook-readme/services/": true,
     "packages/example-react/etc/": true,
