--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ coverage/
 /packages/storybook-readme/components/
 /packages/storybook-readme/services/
 /packages/storybook-readme/styles/
+/packages/storybook-readme/backwardCompatibility/
 /packages/storybook-readme/env/
 /packages/storybook-readme/vue/
 /packages/storybook-readme/constants.js
