--- a/packages/example-vue/package.json
+++ b/packages/example-vue/package.json
@@ -19,7 +19,7 @@
     "cross-env": "^5.1.3",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.0.0",
-    "storybook-readme": "=4.0.5",
+    "storybook-readme": "=5.0.0-alpha1",
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.0",
     "vue-loader": "^15.3.0",
