--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -18,7 +18,8 @@
     "markdown-loader": "^5.0.0",
     "marked": "^0.6.1",
     "node-emoji": "1.10.0",
-    "string-raw": "^1.0.1"
+    "string-raw": "^1.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
