--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@babel/core": "7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.2.0",
+    "@babel/preset-env": "^7.3.4",
     "@storybook/addon-actions": "5.0.1",
     "@storybook/addon-info": "5.0.1",
     "@storybook/addon-knobs": "5.0.1",
@@ -20,10 +22,7 @@
     "@storybook/addons": "5.0.1",
     "@storybook/react": "5.0.1",
     "@storybook/storybook-deployer": "^2.3.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.2",
-    "babel-preset-react-app": "^7.0.0",
     "cross-env": "^5.1.3",
     "file-loader": "^3.0.1",
     "highlight.js": "^9.15.6",
