--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -34,7 +34,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-test-renderer": "^16.8.3",
-    "storybook-readme": "=5.0.0-alpha1"
+    "storybook-readme": "=5.0.0-alpha1",
+    "styled-components": "^4.1.3"
   },
   "jest": {
     "testURL": "http://localhost",
