--- a/packages/storybook-readme/.babelrc
+++ b/packages/storybook-readme/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": [["react-app", { "absoluteRuntime": false }]],
+  "presets": [["react-app", { "absoluteRuntime": false, "useESModules": false }]],
   "plugins": ["@babel/plugin-transform-modules-commonjs"]
 }
