feature(#151): possible to set panel title and default panel title is capitalized not uppercased

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ coverage/
 /packages/storybook-readme/const.js
 /packages/storybook-readme/index.js
 /packages/storybook-readme/register.js
+/packages/storybook-readme/registerWithPanelTitle.js
 /packages/storybook-readme/with-docs.js
 /packages/storybook-readme/with-readme.js
