--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -38,6 +38,7 @@
     "const.js",
     "index.js",
     "register.js",
+    "registerWithPanelTitle.js",
     "with-docs.js",
     "with-readme.js"
   ],
