--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clear": "lerna run clear",
     "deploy-storybook": "npm run deploy-storybook --prefix ./packages/example-react",
     "precommit": "lint-staged",
-    "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js' 'src/**/*.json'"
+    "format": "prettier --trailing-comma es5 --single-quote --write 'packages/**/*.js' 'packages/**/*.json'"
   },
   "keywords": [],
   "author": "",
