--- a/packages/example-react/package.json
+++ b/packages/example-react/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.2.0",
     "@babel/preset-env": "^7.3.4",
@@ -20,6 +20,7 @@
     "@storybook/addon-notes": "5.0.6",
     "@storybook/addon-storyshots": "5.0.6",
     "@storybook/addons": "5.0.6",
+    "@storybook/html": "^5.0.11",
     "@storybook/react": "5.0.6",
     "@storybook/storybook-deployer": "^2.3.0",
     "babel-loader": "^8.0.2",
@@ -47,7 +48,9 @@
     }
   },
   "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "husky": "^2.2.0",
+    "lerna": "^3.8.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0"
   }
 }
